source/scenes/home/SendAsset/Send/Send.scss
@import '~assets/styles/variables';

.wrapper {
  display: flex;
  align-items: flex-start;
  justify-content: start;
  overflow: auto;
  width: 100%;
  height: 100%;

  .bodywrapper {
    width: 100%;
    height: 100%;
  }

  section.subheading {
    height: 60px;
    width: 100%;
    border-bottom: 1px solid $gray-100;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;

    font-weight: 600;
    font-size: 18px;
    line-height: 24px;
    display: flex;
    align-items: center;
    text-align: center;
    color: $gray-dark;
  }

  section.balance {
    width: 100%;
    font-weight: 500;
    font-size: 12px;
    height: 60px;
    display: flex;
    align-items: center;
    justify-content: center;
    line-height: 18px;
    color: $gray-dark;

    span {
      font-size: 16px;
    }
  }

  .input {
    font-weight: 500;
    font-size: 16px;
    line-height: 24px;
    height: 48px;
    padding: 0 16px;
    background: $white;
    transition: all 0.3s;

    input {
      text-overflow: ellipsis;
      overflow: hidden;
      font-weight: 500;
      font-size: 12px;
      line-height: 18px;
      transition: all 0.3s;
    }

    &.amount {
      input {
        padding-right: 48px;
      }
    }

    &.fee {
      input {
        padding-right: 92px;
      }
    }
  }


  .networkContainer {
    padding: 0px 36px 10px 36px;
  }

  .networkTitle {
    font-weight: 500;
    font-size: 10px;
    margin-bottom: 8px;
    margin-left: 16px;
    text-transform: uppercase;
    color: #474747;
  }

  section.content {
    width: 100%;
    box-sizing: border-box;
    padding: 0 36px;
    padding-bottom: 20px;
    position: relative;

    ul.form {
      list-style: none;
      margin: -12px;
      padding: 12px;
      border-radius: 10px;

      li {
        height: 56px;
        position: relative;
        box-sizing: border-box;
        display: flex;
        flex-direction: column;
        margin-bottom: 12px;
        align-items: flex-start;

        &:last-child {
          border-bottom: none;
          margin-bottom: 0;
        }

        label {
          font-weight: 500;
          font-size: 10px;
          line-height: 12px;
          margin-bottom: 8px;
          margin-left: 16px;
          text-transform: uppercase;
          color: $gray-dark;
        }

        .textBtn {
          background: transparent;
          min-width: initial;
          position: absolute;
          box-shadow: none;
          top: 26px;
          right: 8px;
          height: 22px !important;
          font-weight: 500;
          font-size: 10px;
          color: #521e8a;
          padding: 12px;
          width: fit-content;
          text-transform: uppercase;
        }

        .address {
          input {
            padding-left: 15px;
          }

          &.verified {
            color: $purple;
          }

        }

        .statusIcon {
          position: absolute;
          opacity: 1;
          top: 32px;
          left: 12px;
          z-index: 1;
          transform: scale(1);
          transition: all 0.3s;

          &.hide {
            opacity: 0;
            transform: scale(0);
          }
        }
      }
    }

    .status {
      display: flex;
      flex-direction: row;
      align-items: center;
      padding-top: 12px;
      justify-content: space-between;

      .equalAmount {
        font-weight: 500;
        font-size: 10px;
        line-height: 12px;
        color: $gray-100;
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
        max-width: 300px;
        display: block;
      }

      .error {
        font-weight: 500;
        font-size: 12px;
        line-height: 12px;
        color: $red;
      }
    }

    .description {
      font-weight: 500;
      font-size: 12px;
      line-height: 18px;
      color: $gray-dark;
      margin-top: 12px;
    }
  }
  section.transactionFee {
    padding: 0 24px 0 24px;
    opacity: 1;
    transition: all 0.3s;
    transform: translateX(0);
    filter: blur(0);

    &.hide {
      opacity: 0;
      transform: translateX(-30px);
      filter: blur(10px);
    }

    .gasRow {
      display: flex;
      font-size: 10px;
      text-transform: uppercase;
      color: $gray-dark;
      align-items: center;
      padding: 12px;
      background: $gray-light;
      border-radius: 10px;
      position: relative;

      & > span:first-child {
        margin-right: 30px;
      }

      .gasPriceText {
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        justify-content: flex-start;
      }

      .gasInput {
        width: 121px;
        height: 24px;
        padding-right: 50px;
        padding-left: 8px;
        border: 1px solid $purple !important;
      }

      .gasLevel {
        position: absolute;
        right: 24px;
        top: 20px;
        text-transform: none;
      }
    }

    .heading {
      display: flex;
      justify-content: space-between;
      .title {
        font-style: 500;
        font-weight: 500;
        font-size: 16px;
        line-height: 24px;
      }
      .advancedSetting {
        font-family: $inter;
        font-style: normal;
        font-weight: 500;
        font-size: 10px;
        line-height: 24px;

        text-transform: uppercase;
        color: $purple;
        cursor: pointer;
      }
    }
    .status {
      margin-left: 12px;
      .equalAmount {
        font-weight: 500;
        font-size: 10px;
        line-height: 24px;
        color: $gray-100;
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
        max-width: 300px;
        text-transform: uppercase;
        display: block;
      }
    }

    .sliderCustom {
      display: flex;
      flex-grow: 1;
      transition: all 0.3s;
      position: relative;
      width: 110px;
      margin-left: 14px;
      margin-right: 14px;
    }
    .sliderRail {
      background: $purple-light;
    }
    .sliderTrack {
      background: $purple;
    }
    .mark {
      background: transparent;
    }
    .thumb {
      background: $purple;
      transition: all 0.3s;
    }
    .markLabel {
      top: 34px;
      font-weight: 500;
      font-size: 10px;
      line-height: 24px;
      font-family: $inter;
      color: $gray-100;

      &[data-index='0'] {
        transform: none;
      }
      &[data-index='2'] {
        transform: translateX(-100%);
      }
    }
  }

  section.actionGroup {
    width: 100%;
    margin-top: 8px;
    padding-bottom: 20px;
    display: flex;
    flex-grow: 1;
    justify-content: center;
    align-items: flex-end;

    .actions {
      display: flex;
      width: 300px;
      bottom: 24px;
      justify-content: space-between;

      .close {
        background: $gray-light;
        color: $gray-dark;
      }

      .button {
        width: 144px;
      }
    }
  }
}

